Se termino redaccion

--- a/Caso_BOPS.ipynb
+++ b/Caso_BOPS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "functional-utility",
+   "id": "different-instruction",
    "metadata": {},
    "source": [
     "# Caso BOPS"
@@ -10,95 +10,73 @@
   },
   {
    "cell_type": "markdown",
-   "id": "basic-night",
+   "id": "placed-polish",
    "metadata": {},
    "source": [
-    "Pista: Existen dos experimentos naturales. Canadá y las tiendas que se encuentran\n",
-    "lejos. Utilízalos"
+    "**Resumen del problema**\n",
+    "\n",
+    "Objetivo de Home & Kitchen: Ventas habian crecido por 5 años pero luego se estabilizaron, quieren continuar creciendo\n",
+    "\n",
+    "BOPS: Buy Online Pickup at Store \n",
+    "\n",
+    "* Ventajas: \n",
+    "\n",
+    "    * Ahorro en costos de envio y entregas el mismo dia\n",
+    "\n",
+    "* Desventajas:\n",
+    "\n",
+    "    * Cooperación entre B&M y online\n",
+    "    * B&M tenia que dar disponibilidad del inventario en tiempo real para todos los almacenes\n",
+    "    * B&M tenía que reservarlos artículos una vez que se generara una orden online\n",
+    "    * Todo lo anterior iba a ser gestionado por el personal de B&M pero las perdidas y ganancias se contabilizarían para la división online\n",
+    "\n",
+    "Implementación: Solo fue implementado en EU porque en Canada no se tuvo todo listo a tiempo\n",
+    "\n",
+    "Problemática: Al observar las ventas promedio en un periodo de 6 meses antes y despues de BOPS los resultados indican que BOPS empeoro las ventas. Sin embargo, esta información podría no estar contemplando otros factores por lo que se requiere profundizar más en los resultados"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "reverse-gateway",
+   "id": "olympic-canberra",
    "metadata": {},
    "source": [
-    "<font color= 'red'> Agregar detalles del caso de negocio\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "short-river",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "processed-remove",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.options.display.float_format = '{:,.4f}'.format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "freelance-going",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bm = pd.read_csv('datos_bops/bops_bm.csv')\n",
-    "online = pd.read_csv('datos_bops/bops_online.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "timely-jungle",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bm.columns = bm.columns.str.rstrip().str.lstrip()\n",
-    "online.columns = online.columns.str.rstrip().str.lstrip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "seventh-positive",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bm['sales'] = bm['sales'].apply(lambda x: float(x.replace(',', '')))\n",
-    "online['sales'] = online['sales'].apply(lambda x: float(x.replace(',', '')))"
+    "Diccionario:\n",
+    "\n",
+    "* legacy retail chains:  companies who have been around for 30, 50, 100 years\n",
+    "* Brick & Mortar: Estos comercios tienen como única protagonista de su oferta comercial a la tienda física."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cubic-appliance",
+   "id": "weekly-reproduction",
    "metadata": {},
    "source": [
-    "<font color='red'> Explicar porque A/B testing"
+    "<font  size=5>Planteamiento de la solución"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "pleasant-stage",
+   "id": "critical-handy",
    "metadata": {},
    "source": [
-    "Para verificar el efecto de la implementación de OPS en las tiendas de Estados Unidos se utilizará el hint que se indica en la pregunta que es usar las tiendas de Canada y las que se encuentran lejos como grupo control."
+    "* Para verificar el efecto de la implementación de OPS en las tiendas de Estados Unidos se utilizará el hint que se indica en la pregunta que es usar las tiendas de Canada y las que se encuentran lejos como **grupo control**. \n",
+    "\n",
+    "* Idealmente haríamos A/B testing para verificar la efectividad de la iniciativa BOPS, pero por cuestión de tiempo simplificaremos bastante el proceso y asumiremos que cualquier diferencia encontrada entre grupo control y grupo tratamiento es significativa; es decir no se planteara formalmente una hipótesis relacionada a la distribución de nuestra variable a medir.\n",
+    "\n",
+    "* Se replicara la tabla mostrada en el pdf de los resultados de ventas pero partira para grupo control y grupo de tratamiento. Además que usaremos la mediana en vez del promedio por se un estadístico más robusto."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "brown-progress",
+   "id": "individual-peninsula",
+   "metadata": {},
+   "source": [
+    "<font  size=5> Definición de grupo control y grupo tratamiento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "harmful-chrome",
    "metadata": {},
    "source": [
     "* Ventas B&M\n",
@@ -113,8 +91,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "automatic-series",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "greenhouse-freeware",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.float_format = '{:,.4f}'.format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "pleasant-korea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bm = pd.read_csv('datos_bops/bops_bm.csv')\n",
+    "online = pd.read_csv('datos_bops/bops_online.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "subtle-electron",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bm.columns = bm.columns.str.rstrip().str.lstrip()\n",
+    "online.columns = online.columns.str.rstrip().str.lstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "utility-verification",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bm['sales'] = bm['sales'].apply(lambda x: float(x.replace(',', '')))\n",
+    "online['sales'] = online['sales'].apply(lambda x: float(x.replace(',', '')))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "controversial-console",
+   "id": "technological-virgin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "becoming-interest",
+   "id": "decreased-sustainability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "affected-merit",
+   "execution_count": 8,
+   "id": "synthetic-trouble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "reverse-lighting",
+   "execution_count": 9,
+   "id": "quality-township",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "speaking-manchester",
+   "execution_count": 10,
+   "id": "burning-survival",
    "metadata": {
     "scrolled": true
    },
@@ -239,7 +272,7 @@
        "bm                 -0.1509  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "hourly-exchange",
+   "execution_count": 11,
+   "id": "satisfied-grave",
    "metadata": {},
    "outputs": [
     {
@@ -275,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "japanese-seating",
+   "execution_count": 12,
+   "id": "compatible-smoke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,8 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "front-participation",
+   "execution_count": 13,
+   "id": "acute-circle",
    "metadata": {},
    "outputs": [
     {
@@ -310,6 +343,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>num_semanas_after</th>\n",
        "      <th>before_BOPS_control</th>\n",
        "      <th>after_BOPS_control</th>\n",
        "      <th>cambio_control</th>\n",
@@ -321,6 +355,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>online</th>\n",
+       "      <td>25.0000</td>\n",
        "      <td>1,558,447.7692</td>\n",
        "      <td>1,386,646.6000</td>\n",
        "      <td>-0.1102</td>\n",
@@ -330,6 +365,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>bm</th>\n",
+       "      <td>27.0000</td>\n",
        "      <td>1,034,979.7407</td>\n",
        "      <td>866,241.0741</td>\n",
        "      <td>-0.1630</td>\n",
@@ -342,16 +378,20 @@
        "</div>"
       ],
       "text/plain": [
-       "        before_BOPS_control  after_BOPS_control  cambio_control  \\\n",
-       "online       1,558,447.7692      1,386,646.6000         -0.1102   \n",
-       "bm           1,034,979.7407        866,241.0741         -0.1630   \n",
+       "        num_semanas_after  before_BOPS_control  after_BOPS_control  \\\n",
+       "online            25.0000       1,558,447.7692      1,386,646.6000   \n",
+       "bm                27.0000       1,034,979.7407        866,241.0741   \n",
        "\n",
-       "        before_BOPS_tratamiento  after_BOPS_tratamiento  cambio_tratamiento  \n",
-       "online           1,256,885.1923          1,082,283.6800             -0.1389  \n",
-       "bm               4,132,262.6296          3,698,465.8148             -0.1050  "
+       "        cambio_control  before_BOPS_tratamiento  after_BOPS_tratamiento  \\\n",
+       "online         -0.1102           1,256,885.1923          1,082,283.6800   \n",
+       "bm             -0.1630           4,132,262.6296          3,698,465.8148   \n",
+       "\n",
+       "        cambio_tratamiento  \n",
+       "online             -0.1389  \n",
+       "bm                 -0.1050  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,8 +402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "manual-opposition",
+   "execution_count": 14,
+   "id": "compressed-plaintiff",
    "metadata": {
     "scrolled": true
    },
@@ -389,18 +429,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "designing-brief",
+   "id": "speaking-miami",
    "metadata": {},
    "source": [
     "## Interpretación:\n",
     "* Tanto en el grupo control como en el tratamiento se observo una caida en las ventas en el segundo periodo de observación (October 11, 2011–April 11, 2012)\n",
     "* Al observar la mediana de precios por semana, observamos que la caída en ventas fue menor para el grupo tratamiento tanto online como B&M. Esto indicaría que la implementacion de BOPS fue exitosa porque ayudo reducir la caida en ventas\n",
-    "* Al observar el promedio de precios por semana observamos que la caída en ventas fue menor para el grupo tratamiento de B&M, mientras que para las operaciones online la caída en ventas fue  mayor para el grupo tratamiento. Los resultados no son concluyentes para este caso, sin embargo nos quedaremos con el inciso anterior dado que la mediana es una métrica más robusta."
+    "* Al observar el promedio de precios por semana observamos que la caída en ventas fue menor para el grupo tratamiento de B&M, mientras que para las operaciones online la caída en ventas fue  mayor para el grupo tratamiento. Los resultados no son concluyentes para este caso, sin embargo nos quedaremos con el inciso anterior porque como mencionamos arriba la mediana es una métrica más robusta y es preferible para este problema."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "collectible-handle",
+   "id": "attempted-amsterdam",
    "metadata": {},
    "source": [
     "## Preguntas:\n",
@@ -411,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressive-criminal",
+   "id": "built-purple",
    "metadata": {},
    "source": [
     "2. ¿Cuántos millones de dólares se ganaron o perdieron a partir del programa?"
@@ -419,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "better-aurora",
+   "id": "presidential-daughter",
    "metadata": {},
    "source": [
     "De manera aproximada podríamos decir que se ganó todo lo que se hubiera perdido de no haber implemetando el programa (para el grupo tratamiento) menos el costo de la implementación. Entonces la fórmula queda asi:\n",
@@ -431,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "institutional-namibia",
+   "execution_count": 15,
+   "id": "explicit-tradition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "indoor-default",
+   "execution_count": 16,
+   "id": "rental-aluminum",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +569,7 @@
        "bm                     320,493.6653       8,653,328.9627  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,8 +580,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "abandoned-report",
+   "execution_count": 17,
+   "id": "alive-porter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,8 +590,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "third-beatles",
+   "execution_count": 18,
+   "id": "sensitive-dairy",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subsequent-nepal",
+   "id": "prospective-burning",
    "metadata": {},
    "outputs": [],
    "source": []
