Se termino la redacción

--- a/Caso_BOPS.ipynb
+++ b/Caso_BOPS.ipynb
@@ -585,12 +585,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimacion = mediana_ventas_semana.estimacion_ganancia.sum() #Numero prom de semanas para online y "
+    "estimacion = mediana_ventas_semana.estimacion_ganancia.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "sensitive-dairy",
    "metadata": {},
    "outputs": [
@@ -598,21 +598,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La ganancia aproximada por haber implementado BOPS es de $10,473,852 menos el costo de la implementación de BOPS\n"
+      "La ganancia aproximada por haber implementado BOPS es de 10,473,852 pesos menos el costo de la implementación de BOPS\n"
      ]
     }
    ],
    "source": [
-    "print(f\"La ganancia aproximada por haber implementado BOPS es de ${estimacion:,.0f} menos el costo de la implementación de BOPS\")"
+    "print(f\"La ganancia aproximada por haber implementado BOPS es de {estimacion:,.0f} pesos menos el costo de la implementación de BOPS\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "prospective-burning",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
